--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,13 @@ jobs:
         - run:
              name: Configure AWS credentials
              command: |
-              aws configure set aws_access_key_id YOUR_ACCESS_KEY
-              aws configure set aws_secret_access_key YOUR_SECRET_KEY
-              aws configure set default.region YOUR_DEFAULT_REGION
+                echo $AWS_ACCESS_KEY_ID | aws configure set aws_access_key_id --profile circleci default
+                 echo $AWS_SECRET_ACCESS_KEY | aws configure set aws_secret_access_key --profile circleci default
+                echo $AWS_DEFAULT_REGION | aws configure set default.region --profile circleci default
+                
+              # aws configure set aws_access_key_id YOUR_ACCESS_KEY
+              # aws configure set aws_secret_access_key YOUR_SECRET_KEY
+              # aws configure set default.region YOUR_DEFAULT_REGION
         - run:
             name: Upload files to S3
           # copy the packages from source dir to destination dir
